--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://cdn-icons-png.flaticon.com/512/3616/3616721.png"
+      href="https://cdn-icons-png.flaticon.com/512/2694/2694473.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Press Release</title>
+    <title>Quote Builder</title>
   </head>
   <body>
     <div id="root"></div>
